<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/sort_by_name"
        android:title="@string/sort_by_name">
    </item>

    <item android:id="@+id/sort_by_size"
        android:title="@string/sort_by_size">
        <menu>
            <item android:id="@+id/size_descending"
                android:title="@string/descending_sort"/>
            <item android:id="@+id/size_ascending"
                android:title="@string/ascending_sort"/>
        </menu>
    </item>

    <item android:id="@+id/sort_by_date"
        android:title="@string/sort_by_date">
        <menu>
            <item android:id="@+id/date_descending"
                android:title="@string/descending_sort"/>
            <item android:id="@+id/date_ascending"
                android:title="@string/ascending_sort"/>
        </menu>
    </item>

    <item android:id="@+id/sort_by_extension"
        android:title="@string/sort_by_extension">
        <menu>
            <item android:id="@+id/extension_descending"
                android:title="@string/descending_sort"/>
            <item android:id="@+id/extension_ascending"
                android:title="@string/ascending_sort"/>
        </menu>
    </item>

</menu>